--- a/views/booking.pug
+++ b/views/booking.pug
@@ -13,7 +13,7 @@ html
       .section-top
         .navigation
           a.buttonLogout(href='')
-            img(src='http://www.personalbrandingblog.com/wp-content/uploads/2017/08/blank-profile-picture-973460_640.png')
+            img(src='')
             .logout LOGOUT
       .section-center
         .container
