--- a/views/booking.pug
+++ b/views/booking.pug
@@ -1,13 +1,92 @@
 doctype html
 html
   head
-    title My First Node App
+    title Laundry Booking
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css', integrity='sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M', crossorigin='anonymous')
     link(rel='stylesheet', href='css/booking.css')
     script(src='https://code.jquery.com/jquery-3.2.1.min.js', crossorigin='anonymous')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js', integrity='sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4', crossorigin='anonymous')
     script(src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js', integrity='sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1', crossorigin='anonymous')
     script(src='/socket.io/socket.io.js')
+    link(href='../packages/core/main.css', rel='stylesheet')
+    link(href='../packages/daygrid/main.css', rel='stylesheet')
+    script(src='../packages/core/main.js')
+    script(src='../packages/interaction/main.js')
+    script(src='../packages/daygrid/main.js')
+    
+    script.
+      document.addEventListener('DOMContentLoaded', function() {
+      var calendarEl = document.getElementById('calendar');
+      var calendar = new FullCalendar.Calendar(calendarEl, {
+      plugins: [ 'interaction', 'dayGrid' ],
+      defaultDate: '2019-04-12',
+      editable: true,
+      eventLimit: true, // allow "more" link when too many events
+      events: [
+      {
+      title: 'All Day Event',
+      start: '2019-04-01'
+      },
+      {
+      title: 'Long Event',
+      start: '2019-04-07',
+      end: '2019-04-10'
+      },
+      {
+      groupId: 999,
+      title: 'Repeating Event',
+      start: '2019-04-09T16:00:00'
+      },
+      {
+      groupId: 999,
+      title: 'Repeating Event',
+      start: '2019-04-16T16:00:00'
+      },
+      {
+      title: 'Conference',
+      start: '2019-04-11',
+      end: '2019-04-13'
+      },
+      {
+      title: 'Meeting',
+      start: '2019-04-12T10:30:00',
+      end: '2019-04-12T12:30:00'
+      },
+      {
+      title: 'Lunch',
+      start: '2019-04-12T12:00:00'
+      },
+      {
+      title: 'Meeting',
+      start: '2019-04-12T14:30:00'
+      },
+      {
+      title: 'Happy Hour',
+      start: '2019-04-12T17:30:00'
+      },
+      {
+      title: 'Dinner',
+      start: '2019-04-12T20:00:00'
+      },
+      {
+      title: 'Birthday Party',
+      start: '2019-04-13T07:00:00'
+      },
+      {
+      title: 'Click for Google',
+      url: 'http://google.com/',
+      start: '2019-04-28'
+      }
+      ]
+      });
+      calendar.render();
+      });
+    style.
+      #calendar {
+      max-width: 900px;
+      margin: 0 auto;
+      }
+    
   body
     #booking.section
       .section-top
@@ -19,9 +98,7 @@ html
         .container
           .row
             .col-md-7.col-md-push-5
-              .booking-cta
-                h1 Make your laundry booking
-                p Please do not overbooking laundry slot!
+              #calendar
             .col-md-4.col-md-pull-7
               .booking-form
                 form#bookingForm
