--- a/views/booking.pug
+++ b/views/booking.pug
@@ -10,82 +10,14 @@ html
     script(src='/socket.io/socket.io.js')
     link(href='../packages/core/main.css', rel='stylesheet')
     link(href='../packages/daygrid/main.css', rel='stylesheet')
+    link(href='../packages/timegrid/main.css', rel='stylesheet')
+    link(href='../packages/list/main.css', rel='stylesheet')
     script(src='../packages/core/main.js')
     script(src='../packages/interaction/main.js')
     script(src='../packages/daygrid/main.js')
-    
-    script.
-      document.addEventListener('DOMContentLoaded', function() {
-      var calendarEl = document.getElementById('calendar');
-      var calendar = new FullCalendar.Calendar(calendarEl, {
-      plugins: [ 'interaction', 'dayGrid' ],
-      defaultDate: '2019-04-12',
-      editable: true,
-      eventLimit: true, // allow "more" link when too many events
-      events: [
-      {
-      title: 'All Day Event',
-      start: '2019-04-01'
-      },
-      {
-      title: 'Long Event',
-      start: '2019-04-07',
-      end: '2019-04-10'
-      },
-      {
-      groupId: 999,
-      title: 'Repeating Event',
-      start: '2019-04-09T16:00:00'
-      },
-      {
-      groupId: 999,
-      title: 'Repeating Event',
-      start: '2019-04-16T16:00:00'
-      },
-      {
-      title: 'Conference',
-      start: '2019-04-11',
-      end: '2019-04-13'
-      },
-      {
-      title: 'Meeting',
-      start: '2019-04-12T10:30:00',
-      end: '2019-04-12T12:30:00'
-      },
-      {
-      title: 'Lunch',
-      start: '2019-04-12T12:00:00'
-      },
-      {
-      title: 'Meeting',
-      start: '2019-04-12T14:30:00'
-      },
-      {
-      title: 'Happy Hour',
-      start: '2019-04-12T17:30:00'
-      },
-      {
-      title: 'Dinner',
-      start: '2019-04-12T20:00:00'
-      },
-      {
-      title: 'Birthday Party',
-      start: '2019-04-13T07:00:00'
-      },
-      {
-      title: 'Click for Google',
-      url: 'http://google.com/',
-      start: '2019-04-28'
-      }
-      ]
-      });
-      calendar.render();
-      });
-    style.
-      #calendar {
-      max-width: 900px;
-      margin: 0 auto;
-      }
+    script(src='../packages/timegrid/main.js')
+    script(src='../packages/list/main.js')
+    script(src="js/calendar.js")
     
   body
     #booking.section
@@ -97,9 +29,9 @@ html
       .section-center
         .container
           .row
-            .col-md-7.col-md-push-5
+            .col-md-8
               #calendar
-            .col-md-4.col-md-pull-7
+            .col-md-4
               .booking-form
                 form#bookingForm
                   .form-group
