--- a/views/calendar.pug
+++ b/views/calendar.pug
@@ -4,21 +4,33 @@ html
     meta(charset='utf-8')
     link(href='../packages/core/main.css', rel='stylesheet')
     link(href='../packages/daygrid/main.css', rel='stylesheet')
+    link(href='../packages/timegrid/main.css', rel='stylesheet')
+    link(href='../packages/list/main.css', rel='stylesheet')
     script(src='../packages/core/main.js')
     script(src='../packages/interaction/main.js')
     script(src='../packages/daygrid/main.js')
+    script(src='../packages/timegrid/main.js')
+    script(src='../packages/list/main.js')
     script.
       document.addEventListener('DOMContentLoaded', function() {
       var calendarEl = document.getElementById('calendar');
       var calendar = new FullCalendar.Calendar(calendarEl, {
-      plugins: [ 'interaction', 'dayGrid' ],
+      plugins: [ 'interaction', 'dayGrid', 'timeGrid', 'list' ],
+      height: 'parent',
+      header: {
+      left: 'prev,next today',
+      center: 'title',
+      right: 'timeGridWeek,timeGridDay,listWeek'
+      },
+      defaultView: 'timeGridWeek',
       defaultDate: '2019-04-12',
+      navLinks: true, // can click day/week names to navigate views
       editable: true,
       eventLimit: true, // allow "more" link when too many events
       events: [
       {
       title: 'All Day Event',
-      start: '2019-04-01'
+      start: '2019-04-01',
       },
       {
       title: 'Long Event',
@@ -75,15 +87,27 @@ html
       calendar.render();
       });
     style.
-      body {
-      margin: 40px 10px;
-      padding: 0;
+      html, body {
+      overflow: hidden; /* don't do scrollbars */
       font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
       font-size: 14px;
       }
-      #calendar {
-      max-width: 900px;
-      margin: 0 auto;
+      #calendar-container {
+      position: fixed;
+      top: 20px;
+      left: 20px;
+      right: 20px;
+      bottom: 20px;
+      }
+      .fc-header-toolbar {
+      /*
+      the calendar will be butting up against the edges,
+      but let's scoot in the header's buttons
+      */
+      padding-top: 1em;
+      padding-left: 1em;
+      padding-right: 1em;
       }
   body
-    #calendar
+    #calendar-container
+      #calendar
