--- a/views/signIn.pug
+++ b/views/signIn.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang='en')
   head
-    title Login V18
+    title Laundry Booking
     meta(charset='UTF-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     link(rel='stylesheet', type='text/css', href='vendor/bootstrap/css/bootstrap.min.css')
