fix redirect after sign up

--- a/views/booking.pug
+++ b/views/booking.pug
@@ -36,7 +36,7 @@ html
                 form#bookingForm
                   .form-group
                     span.form-label Machine Type
-                    select.form-control
+                    select.form-control(name='type')
                       option Washer
                       option Dryer
                     span.select-arrow
