--- a/views/signUp.pug
+++ b/views/signUp.pug
@@ -67,3 +67,4 @@ html(lang='en')
     script(src='vendor/countdowntime/countdowntime.js')
     // ===============================================================================================
     script(src='js/main.js')
+    script(src="js/signUp.js")
